--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -64,22 +64,22 @@
     <div class="row">
         <nav class="navbar navbar-expand-md navbar-dark bg-dark col-lg-12">
             <div class="container-fluid">
-                <a class="navbar-brand" id="empresa" href="index.php">We Om & Co.</a>
+                <a class="navbar-brand" id="empresa" routerLink="">We Om & Co.</a>
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarMenuResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarMenuResponsive">
-                    <ul class="navbar-nav mr-auto">
-                        <li class="nav-item">
-                            <a class="nav-link" href="index.php">Inicio</a>
+                    <ul class=" navbar-nav mr-auto">
+                        <li routerLinkActive="active" class=" nav-item">
+                            <a class="nav-link" routerLink="home">Inicio</a>
                         </li>
-                        <li class="nav-item">
+                        <li routerLinkActive="active" class="nav-item">
                             <a class="nav-link" href="about.php">Acerca de</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="contact.php">Contáctanos</a>
+                        <li routerLinkActive="active" class="nav-item">
+                            <a class="nav-link" routerLink="contact">Contáctanos</a>
                         </li>
-                        <li class="nav-item">
+                        <li routerLinkActive="active" class="nav-item">
                             <a class="nav-link" href="galeria.php">Galeria</a>
                         </li>
                        
