--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <app-header></app-header>
 <app-carousel></app-carousel>
 <app-inicio></app-inicio>
+<router-outlet></router-outlet>
 <app-footer></app-footer>
