--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,19 @@
 <app-header></app-header>
-<app-carousel></app-carousel>
-<app-inicio></app-inicio>
-<router-outlet></router-outlet>
+
+<section class="ae-container-fluid rk-main">
+
+    <!--<app-carousel></app-carousel>
+    
+    <app-servicios></app-servicios>
+    <app-horario></app-horario>
+    <app-galeria></app-galeria>
+    <app-testimonios></app-testimonios>
+    <app-colaboradores><app-colaboradores>
+    <app-inicio></app-inicio>-->
+    <router-outlet></router-outlet>
+
+
+
+</section>
+
 <app-footer></app-footer>
