--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -12,7 +12,33 @@
     	<div class="row mt-5 mb-5">
             <div class="col-lg-6">
                 <!--formulario de inscripción-->
-                <?php include('complements/formulario.php') ?>
+                    <form>
+                        <div class="form-group">
+                            <label for="form-nombre">Nombre</label>
+                            <input type="email" class="form-control" id="form-nombre" placeholder="Nombre">
+                        </div>
+
+                        <div class="form-group">
+                            <label for="form-correo">Correo Electronico</label>
+                            <input type="email" class="form-control" id="form-correo" placeholder="Correo electronico">
+                        </div>
+
+                        <div class="form-group">
+                            <label for="form-asunto">Asunto</label>
+                            <input type="text" class="form-control" id="form-asunto" placeholder="Asunto">
+                        </div>
+
+                        <div class="form-group">
+                            <label for="form-comre">Comentarios y requerimientos</label>
+                            <textarea class="form-control" id="form-comre" placeholder="Comentarios y requerimientos"></textarea>
+                        </div>
+
+                        <div class="form-group">
+                            <div class="col-lg-12">
+                                <button class="btn btn-primary">Enviar</button>
+                            </div>
+                        </div>
+                    </form>
             </div>
             <div class="col-lg-6">
             	<div id="googleMap">
