--- a/src/app/pages/inicio/inicio.component.html
+++ b/src/app/pages/inicio/inicio.component.html
@@ -1,3 +1,11 @@
+
+
+
+<app-carousel></app-carousel>
+<app-servicios></app-servicios>
+<app-horario></app-horario>
+<app-testimonios></app-testimonios>
+
 <div class="container mt-5">
             <div class="container d-none d-lg-block lineatiempo">
                 <div class="page-header my-4">
