--- a/src/app/pages/carousel/carousel.component.html
+++ b/src/app/pages/carousel/carousel.component.html
@@ -23,7 +23,7 @@
         </div>
         <!-- Slide Three - Set the background image for this slide in the line below -->
         <div class="carousel-item" >
-            <img class="d-block w-100" src="assets/yoga3.jpg" alt="Third Slide" />
+            <img class="d-block w-100" src="assets/img/yoga3.jpg" alt="Third Slide" />
             <div class="carousel-caption d-none d-md-block">
                 <h3>El Yoga es</h3>
                 <p>Acción desinteresada.</p>
