--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -74,17 +74,21 @@
                             <a class="nav-link" routerLink="home">Inicio</a>
                         </li>
                         <li routerLinkActive="active" class="nav-item">
-                            <a class="nav-link" href="about.php">Acerca de</a>
+                            <a class="nav-link" routerLink="about">Acerca de</a>
                         </li>
                         <li routerLinkActive="active" class="nav-item">
                             <a class="nav-link" routerLink="contact">Contáctanos</a>
                         </li>
                         <li routerLinkActive="active" class="nav-item">
-                            <a class="nav-link" href="galeria.php">Galeria</a>
+                            <a class="nav-link" routerLink="galeria">Galeria</a>
                         </li>
-                       
-
                     </ul>
+                    <div class="collapse navbar-collapse" id="mainMenu">
+                          <form class="form-inline ml-auto">
+                            <a href="{% url 'login' %}" class="btn btn-primary ml-2">Iniciar Sesión</a>
+                            <a href="{% url 'signup' %}" class="btn btn-primary ml-2">¡Inscríbete!</a>
+                          </form>
+                    </div>
                 </div>
             </div>
         </nav>
