--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -32,7 +32,7 @@
                       </form>-->
                         <form class="form-inline my-2 my-lg-0">
                             <!--<input class="form-control bg-transparent text-white mr-sm-2" type="search" placeholder="e-mail" aria-label="Search">-->
-                            <a class="btn btn-primary" href="contact.php" role="button">Inscribirse</a>
+                            <a class="btn btn-primary" routerLink="signup" role="button">Inscribirse</a>
                         </form>
                   </div>
               </div>
