--- a/projectDAW-django/templates/userprofile.html
+++ b/projectDAW-django/templates/userprofile.html
@@ -55,7 +55,8 @@ scratch. This page gets rid of all links and provides the needed markup only.
             <a class="dropdown-item" href="#">My account</a>
             <a class="dropdown-item" href="#">Change password</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="{% url 'logout' %}">Log out</a>
+            <!--<a class="dropdown-item" href="{% url 'logout' %}">Log out</a>-->
+            <a class="dropdown-item" href="http://localhost:4200/">Log out</a>
           </div>
         </li>
         </ul>
