--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,15 +1,9 @@
-{% extends 'base.html' %}
 
-{% load static %}
 
-{% block stylesheet %}
-  <link rel="stylesheet" href="{% static 'css/accounts.css' %}">
-{% endblock %}
 
-{% block body %}
   <div class="container">
     <h1 class="text-center logo my-4">
-      <a href="{% url 'index' %}">We Om & Co.</a>
+      <a>We Om & Co.</a>
     </h1>
     <div class="row justify-content-center">
       <div class="col-lg-4 col-md-6 col-sm-8">
@@ -17,13 +11,11 @@
           <div class="card-body">
             <h3 class="card-title">Iniciar Sesión</h3>
             <form method="post" novalidate>
-              {% csrf_token %}
-              {% include 'includes/form.html' %}
               <button type="submit" class="btn btn-primary btn-block">Iniciar Sesión</button>
             </form>
           </div>
           <div class="card-footer text-muted text-center">
-            ¿Nuevo en We Om & Co? <a href="{% url 'signup' %}">¡Regístrate!</a>
+            ¿Nuevo en We Om & Co? <a>¡Regístrate!</a>
           </div>
         </div>
         <div class="text-center py-2">
@@ -34,5 +26,4 @@
       </div>
     </div>
   </div>
-{% endblock %}
 
