--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -85,8 +85,8 @@
                     </ul>
                     <div class="collapse navbar-collapse" id="mainMenu">
                           <form class="form-inline ml-auto">
-                            <a  class="btn btn-primary ml-2" routerLink="login">Iniciar Sesión</a>
-                            <a class="btn btn-primary ml-2" routerLink="signup">¡Inscríbete!</a>
+                            <a  class="btn btn-primary ml-2" href="http://127.0.0.1:8000/login">Iniciar Sesión</a>
+                            <a class="btn btn-primary ml-2" href="http://127.0.0.1:8000/signup">¡Inscríbete!</a>
                           </form>
                     </div>
                 </div>
